--- a/app/src/main/res/layout/contacts_fragment.xml
+++ b/app/src/main/res/layout/contacts_fragment.xml
@@ -48,26 +48,14 @@
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                             tools:listitem="@layout/contacts_item" />
 
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:id="@+id/container_search_contact_not_found"
+                        <com.naposystems.pepito.ui.custom.emptyState.EmptyStateCustomView
+                            android:id="@+id/empty_state_search"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                            <TextView
-                                android:id="@+id/textView_search_not_found"
-                                style="@style/TextViewSecondaryTitle"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:paddingStart="@dimen/normal_padding"
-                                android:paddingEnd="@dimen/normal_padding"
-                                android:text="@string/text_blocked_contact_not_found"
-                                android:textAlignment="center"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                        </androidx.constraintlayout.widget.ConstraintLayout>
+                            android:layout_height="match_parent"
+                            custom:description="@string/text_empty_state_search_description"
+                            custom:image="?attr/attrImageEmptyStateSearchContact"
+                            custom:location="@integer/location_empty_state_contacts"
+                            custom:titleEmptyState="@string/text_empty_state_contacts_title" />
 
                     </ViewSwitcher>
 
@@ -77,6 +65,7 @@
                         android:layout_height="match_parent"
                         custom:description="@string/text_empty_state_contacts_description"
                         custom:image="?attr/attrImageEmptyStateNoContacts"
+                        custom:location="@integer/location_empty_state_contacts"
                         custom:titleEmptyState="@string/text_empty_state_contacts_title" />
 
                 </ViewSwitcher>
