--- a/app/src/main/res/values-de/contacts.xml
+++ b/app/src/main/res/values-de/contacts.xml
@@ -7,6 +7,9 @@
     <string name="text_blocked_contact">Kontakt blockiert</string>
     <string name="text_deleted_contact">Kontakt gelöscht</string>
     <string name="search_by_nickname">Suche nach Spitznamen</string>
-    <string name="text_empty_state_contacts_title">Neue Freunde hinzufügen</string>
+    <string name="text_empty_state_contacts_title">Sie haben keine Kontakte hinzugefügt</string>
     <string name="text_empty_state_contacts_description">Sie haben keine Kontakte hinzugefügt</string>
+    <string name="text_add_new_contact">Füge neuen Kontakt hinzu</string>
+    <string name="text_add_contacts">Kontakte hinzufügen</string>
+    <string name="text_search_contact">Meine Kontakte</string>
 </resources>
