--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -187,5 +187,6 @@
         <attr name="image" format="reference" />
         <attr name="titleEmptyState" format="string" />
         <attr name="description" format="string" />
+        <attr name="location" format="integer"/>
     </declare-styleable>
 </resources>
