--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -5,7 +5,7 @@
     <string name="text_power_by" translatable="false">Powered by</string>
     <string name="middle_dash" translatable="false">-</string>
     <string name="okay" translatable="false">OK</string>
-    <string name="only_letters_and_numbers" translatable="false">abcdefghijklmnopqrstuvwxyz0123456789</string>
+    <string name="only_letters_and_numbers" translatable="false">abcdefghijklmnopqrstuvwxyz 0123456789</string>
     <string name="only_letters_upper_case_and_numbers" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
     <string name="only_numbers" translatable="false">0123456789</string>
     <string name="only_letters" translatable="false">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ abcdefghijklmnñopqrstuvwxyz</string>
@@ -86,4 +86,5 @@
     <string name="text_explanation_camera_to_receive_calls">NapoleoN needs access to the camera and microphone to make and receive calls</string>
     <string name="text_twentyfour_hours">24 hours</string>
     <string name="text_access">ACCESS</string>
+    <integer name="location_empty_state_contacts">4</integer>
 </resources>
