--- a/app/src/main/res/layout/empty_state.xml
+++ b/app/src/main/res/layout/empty_state.xml
@@ -61,6 +61,20 @@
                 app:layout_constraintTop_toBottomOf="@id/textView_title"
                 app:layout_constraintVertical_bias="0.175" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_add_contacts"
+                style="@style/AppOutlinedPrimaryButtonPackage"
+                android:text="@string/text_add_contacts"
+                app:icon="@drawable/ic_person_add_white"
+                app:iconTint="?attr/attrTextColorButtonTint"
+                app:iconGravity="start"
+                android:textAllCaps="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView_description"
+                app:layout_constraintVertical_chainStyle="packed" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
