--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -134,7 +134,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             app:borderWidth="0dp"
-            app:srcCompat="@drawable/ic_person_black"
+            app:srcCompat="@drawable/ic_notebook"
             app:tint="?attr/attrFabIconColor" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
