--- a/app/src/main/res/values-fr/contacts.xml
+++ b/app/src/main/res/values-fr/contacts.xml
@@ -7,6 +7,9 @@
     <string name="text_blocked_contact">Contact bloqué</string>
     <string name="text_deleted_contact">Contact supprimé</string>
     <string name="search_by_nickname">Recherche par surnom</string>
-    <string name="text_empty_state_contacts_title">Ajouter de nouveaux amis</string>
+    <string name="text_empty_state_contacts_title">Vous avez ajouté aucun contact</string>
     <string name="text_empty_state_contacts_description">Vous n\'avez ajouté aucun contact</string>
+    <string name="text_add_new_contact">Ajouter un nouveau contact</string>
+    <string name="text_add_contacts">Ajouter des contacts</string>
+    <string name="text_search_contact">Rechercher dans mes contacts</string>
 </resources>
