--- a/app/src/main/res/layout/change_fakes_dialog_fragment.xml
+++ b/app/src/main/res/layout/change_fakes_dialog_fragment.xml
@@ -58,7 +58,7 @@
                 android:id="@+id/editText_display"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:digits="@string/only_letters_and_numbers"
+                android:digits="@string/only_letters"
                 android:inputType="text"
                 android:lines="1"
                 android:maxLength="@dimen/max_length_display_name"
