--- a/app/src/main/res/layout/self_destruct_time_dialog_fragment.xml
+++ b/app/src/main/res/layout/self_destruct_time_dialog_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.selfDestructTime.SelfDestructTimeDialogFragment">
 
     <data>
 
@@ -12,9 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/attrBackgroundColorBackgroundDialog"
-        tools:context=".ui.selfDestructTime.SelfDestructTimeDialogFragment">
+        android:layout_height="wrap_content"
+        android:background="?attr/attrBackgroundColorBackgroundDialog">
 
         <TextView
             android:id="@+id/textView_title"
@@ -40,15 +40,12 @@
             app:layout_constraintTop_toBottomOf="@id/textView_title" />
 
         <ScrollView
-            android:id="@+id/scrollView2"
+            android:id="@+id/scrollView_radioGroup"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="265dp"
+            app:layout_constraintTop_toBottomOf="@id/view_title_separator"
             android:scrollbarThumbVertical="@color/colorSecondaryDark"
-            android:scrollbars="vertical"
-            app:layout_constraintBottom_toTopOf="@id/container_bottom_options"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_title">
+            android:scrollbars="vertical">
 
             <RadioGroup
                 android:id="@+id/radioGroup_options"
@@ -161,7 +158,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/scrollView2">
+            app:layout_constraintTop_toBottomOf="@id/scrollView_radioGroup">
 
             <View
                 android:id="@+id/view_radio_group_separator"
