--- a/app/src/main/res/menu/menu_popup_contact.xml
+++ b/app/src/main/res/menu/menu_popup_contact.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/start_chat"
-        android:title="@string/text_start_chat"/>
+        android:title="@string/text_start_chat"
+        android:visible="false"/>
 
     <item android:id="@+id/see_profile"
         android:title="@string/text_view_profile"/>
