--- a/app/src/main/res/layout/attachment_preview_fragment.xml
+++ b/app/src/main/res/layout/attachment_preview_fragment.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:custom="http://schemas.android.com/apk/res-auto">
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
-            name="viewModel"
-            type="com.naposystems.pepito.utility.sharedViewModels.conversation.ConversationShareViewModel" />
+            name="attachment"
+            type="com.naposystems.pepito.entity.message.attachments.Attachment" />
+
         <variable
             name="galleryItemId"
             type="Integer" />
@@ -53,23 +55,32 @@
                     app:tint="@color/white" />
             </FrameLayout>
 
-            <ImageView
-                android:id="@+id/imageView_preview"
+            <com.naposystems.pepito.ui.custom.noScrollView.NoScrollView
+                android:id="@+id/scrollView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black"
-                android:transitionName="@{@string/transition_name_gallery_thumbnail(galleryItemId)}"
-                app:attachmentImage="@{viewModel.attachmentTaken}"
-                tools:src="@drawable/vertical_photo" />
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageView_preview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/black"
+                    android:scaleType="centerCrop"
+                    android:transitionName="@{@string/transition_name_gallery_thumbnail(galleryItemId)}"
+                    app:attachmentImage="@{attachment}"
+                    tools:src="@drawable/vertical_photo" />
+            </com.naposystems.pepito.ui.custom.noScrollView.NoScrollView>
+
         </ViewSwitcher>
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/imageButton_close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:background="@android:color/transparent"
-            android:foreground="?attr/selectableItemBackground"
-            android:padding="@dimen/small_padding"
+            android:foreground="?attr/actionBarItemBackground"
+            android:padding="@dimen/x_small_padding"
+            android:scaleType="fitCenter"
             android:tint="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -91,6 +102,7 @@
                 android:id="@+id/seekbar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginEnd="@dimen/small_margin"
                 android:layout_weight="1"
                 android:max="100"
@@ -101,11 +113,10 @@
 
             <TextView
                 android:id="@+id/textView_duration"
-                style="@style/SmallBodyTextView.White"
+                style="@style/BodyTextView.White"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/small_margin"
-                android:textSize="@dimen/text_size_audio_duration"
                 app:layout_constraintBottom_toBottomOf="@id/seekbar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/seekbar"
@@ -119,11 +130,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/small_margin"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/floatingActionButton_send"
+            app:layout_constraintStart_toStartOf="parent"
             app:showAttachmentIcon="false"
             app:showCameraIcon="false"
-            app:showEmojiIcon="false"/>
+            app:showEmojiIcon="false" />
 
         <com.naposystems.pepito.ui.custom.fabSend.FabSend
             android:id="@+id/floatingActionButton_send"
