--- a/app/src/main/res/layout/custom_input_panel_quote.xml
+++ b/app/src/main/res/layout/custom_input_panel_quote.xml
@@ -4,23 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
-        <variable
-            name="messageAndAttachment"
-            type="com.naposystems.pepito.entity.message.MessageAndAttachment" />
-
-        <variable
-            name="isFromInputPanel"
-            type="Boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/normal_padding"
         android:paddingEnd="0dp"
-        app:isFromInputPanelQuote="@{isFromInputPanel}"
-        app:userBackground="@{messageAndAttachment}"
         tools:background="@drawable/bg_my_quote_my_message"
         tools:context=".ui.custom.inputPanel.InputPanelQuote"
         tools:showIn="@layout/custom_input_panel_widget">
@@ -32,10 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small_margin"
             android:textColor="@color/red"
-            app:isFromInputPanelQuote="@{isFromInputPanel}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:userQuote="@{messageAndAttachment}"
             tools:text="User" />
 
         <ImageView
@@ -45,8 +34,6 @@
             android:layout_marginEnd="4dp"
             android:src="@drawable/ic_insert_emoticon_black"
             android:visibility="gone"
-            app:attachmentTypeQuote="@{messageAndAttachment}"
-            app:isFromInputPanelQuote="@{isFromInputPanel}"
             app:layout_constraintEnd_toStartOf="@id/textView_message_quote"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView_message_quote"
@@ -63,8 +50,6 @@
             android:layout_marginBottom="@dimen/small_margin"
             android:ellipsize="end"
             android:maxLines="3"
-            app:bodyQuote="@{messageAndAttachment}"
-            app:isFromInputPanelQuote="@{isFromInputPanel}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView_quote"
             app:layout_constraintStart_toEndOf="@id/imageView_type_quote"
@@ -77,8 +62,6 @@
             android:layout_height="0dp"
             android:scaleType="centerCrop"
             android:visibility="gone"
-            app:imageQuote="@{messageAndAttachment}"
-            app:isFromInputPanelQuote="@{isFromInputPanel}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
