--- a/app/src/main/res/layout/validate_password_previous_recovery_account_fragment.xml
+++ b/app/src/main/res/layout/validate_password_previous_recovery_account_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -61,19 +61,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/normal_margin"
                         android:hint="@string/text_placeholder_password"
-                        app:passwordToggleEnabled="true"
                         app:layout_constraintBottom_toTopOf="@+id/viewSwitcher_recovery_account"
                         app:layout_constraintEnd_toEndOf="@id/guideline_end"
                         app:layout_constraintStart_toStartOf="@id/guideline_start"
-                        app:layout_constraintTop_toBottomOf="@id/textView_description">
+                        app:layout_constraintTop_toBottomOf="@id/textView_description"
+                        app:passwordToggleEnabled="true">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/textInputEditText_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:digits="@string/only_letters_and_numbers"
+                            android:inputType="text"
                             android:lines="1"
-                            android:inputType="numberPassword"
                             android:maxLength="50"
+                            android:maxLines="1"
                             android:singleLine="true" />
 
                     </com.google.android.material.textfield.TextInputLayout>
