--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1002,4 +1002,13 @@
         <item name="android:paddingBottom">@dimen/x_small_padding</item>
     </style>
 
+    <style name="QuoteConversation">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/small_margin</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:minWidth">250dp</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
 </resources>
